font and spacing tweak as well as fix for initial scroll for nav

--- a/css/index.css
+++ b/css/index.css
@@ -255,7 +255,7 @@ h1{
   margin-left: 5%;
   margin-right: 5%;
   margin-top: 25px;
-  font-size: 28px;
+  font-size: 33px;
   font-weight: lighter;
 }
 
@@ -268,7 +268,7 @@ h1{
   margin-left: 5%;
   margin-right: 5%;
   margin-top: 25px;
-  font-size: 28px;
+  font-size: 33px;
   font-weight: lighter;
 }
 
@@ -292,7 +292,7 @@ h1{
 }
 .resume-blob-heading{
   color: #8A432C;
-  font-size: 24px;
+  font-size: 25px;
   font-weight: 600;
   margin-bottom: 5px;
 }
@@ -300,7 +300,7 @@ h1{
   font-size:20px;
 }
 .resume-blob-job-title{
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   font-size: 20px;
   font-weight: 600;
   color: #4C8800;
@@ -309,7 +309,7 @@ h1{
   color: #434343;
   font-weight: 400;
   line-height: 25px;
-  font-size: 19px;
+  font-size: 18px;
 }
 
 .card{
@@ -317,7 +317,7 @@ h1{
   margin-left: 5%;
   margin-right: 5%;
   margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   float:left;
   width:90%;
 }
